tests/neg/arena1.scala
struct Ref(var data: i32)
def main(): Unit =
  arena[Arena^{cap}]: r =>
    r

